fixed margins on mobile
also changed layout to sm rather than md

--- a/website/static/website/css/project.css
+++ b/website/static/website/css/project.css
@@ -39,6 +39,11 @@
   width: 100%;
 }
 
+.project-row{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 @media (min-width: 768px) {
   .project-content-row {
     width: 90%;
